--- a/Lightningbug-Light/gtk-3.0/gtk.css
+++ b/Lightningbug-Light/gtk-3.0/gtk.css
@@ -6344,10 +6344,8 @@ entry.caja-location-entry:backdrop, entry.caja-location-entry:disabled {
 }
 
 .caja-navigation-window paned > box {
-  background-color: #dfdfcf;
-}
-.caja-navigation-window paned > box label, .caja-navigation-window paned > box image, .caja-navigation-window paned > box {
   color: rgba(18, 18, 18, 0.9);
+  background-color: #dfdfcf;
 }
 .caja-navigation-window paned > box > box > button.image-button {
   color: rgba(18, 18, 18, 0.9);
